network.tf
# 1. Create the Custom VPC
resource "google_compute_network" "main_vpc" {
  name                    = var.vpc_name
  auto_create_subnetworks = false
}

# 2. Public Subnet (Web/Bastion)
resource "google_compute_subnetwork" "public_subnet" {
  name          = "public-subnet"
  ip_cidr_range = "10.0.1.0/24"
  region        = var.region
  network       = google_compute_network.main_vpc.id

  log_config {
    aggregation_interval = "INTERVAL_5_SEC"
    flow_sampling        = 1.0
    metadata             = "INCLUDE_ALL_METADATA"
  }
}

# TASK: Add the 'private-app-subnet' (10.0.2.0/24) below!
resource "google_compute_subnetwork" "private_app_subnet" {
  name                     = "private-app-subnet"
  ip_cidr_range            = "10.0.2.0/24"
  region                   = var.region
  network                  = google_compute_network.main_vpc.id
  private_ip_google_access = true

  log_config {
    aggregation_interval = "INTERVAL_5_SEC"
    flow_sampling        = 1.0
    metadata             = "INCLUDE_ALL_METADATA"
  }
}

# TASK: Add the 'data-isolated-subnet' (10.0.3.0/24) below!
resource "google_compute_subnetwork" "data_isolated_subnet" {
  name          = "data-isolated-subnet"
  ip_cidr_range = "10.0.3.0/24"
  region        = var.region
  network       = google_compute_network.main_vpc.id

  log_config {
    aggregation_interval = "INTERVAL_5_SEC"
    flow_sampling        = 1.0
    metadata             = "INCLUDE_ALL_METADATA"
  }
}

# 5. Cloud Router for NAT
resource "google_compute_router" "nat_router" {
  name    = "healthconnect-nat-router"
  region  = var.region
  network = google_compute_network.main_vpc.id
}

#6 Cloud NAT for Private Subnet
resource "google_compute_router_nat" "private_app_nat" {
  name                               = "private-app-nat"
  router                             = google_compute_router.nat_router.name
  region                             = var.region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"

}
#7 Allow SSH via IAP (Identity-Aware Proxy)
resource "google_compute_firewall" "allow_ssh" {
  name    = "allow-iap-ssh"
  network = google_compute_network.main_vpc.name

  direction     = "INGRESS"
  priority      = 1000
  source_ranges = ["35.235.240.0/20"]
  target_tags   = ["iap-ssh"]

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
}

# Allow Internal HTTP (Port 8080) from Public Subnet to Private App Subnet
resource "google_compute_firewall" "allow_public_to_private_app_8080" {
  name    = "allow-public-to-private-app-8080"
  network = google_compute_network.main_vpc.name

  direction     = "INGRESS"
  priority      = 1000
  source_ranges = ["10.0.1.0/24"]
  target_tags   = ["private-app"]
  allow {
    protocol = "tcp"
    ports    = ["8080"]
  }
}

# Test Instance
resource "google_compute_instance" "test_vm" {
  name         = "hc-test-vm"
  machine_type = "e2-micro"
  zone         = "${var.region}-a"

  tags = ["iap-ssh", "private-app"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    subnetwork = google_compute_subnetwork.private_app_subnet.id
    # No access_config = No Public IP
  }

  metadata = {
    enable-oslogin = "TRUE"
  }
}
